fixed center align problem in New/Edit page

--- a/app/assets/stylesheets/product/new.css
+++ b/app/assets/stylesheets/product/new.css
@@ -25,6 +25,11 @@
 	color: red;
 }
 
+.container
+{
+	width: 1030px;
+}
+
 .header
 {
 	border-bottom: 1px solid lightgrey;
